// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Space /> margin should render child component with Margin. 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Spaceweb__Space-sc-1fdjx97-0 cZhKRl"
  >
    Flex Item
  </div>
</div>
`;

exports[`<Space /> padding should render child component with Padding. 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Spaceweb__Space-sc-1fdjx97-0 JrmBB"
  >
    Flex Item
  </div>
</div>
`;
